test/modules/standard/FileSystem/lydia/copyTree/dest_existed.good
dest_existed.chpl:3: error: uncaught error - File exists in copyTree(a, existing_dir)
